Made more of the layout , stopped at projects

--- a/index.html
+++ b/index.html
@@ -87,7 +87,60 @@
         </div>
 
         <div id="boxes">
+            <div id="projects">
+                <p>Your Projects</p>
+                <div id="grid">
+                    <div id="card-1" class="card">
+                        <p>Super Cool Project</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    <div id="card-2" class="card">
+                        <p>Less Cool Project</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolore maiores fugit similique! Voluptas veritatis possimus quae, dolorem itaque corporis sunt explicabo cupiditate vitae consequuntur nostrum aliquam recusandae similique ipsa?</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    <div id="card-3" class="card">
+                        <p>Impossible App</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quo molestiae eaque suscipit? Maxime quam, veniam molestias id magni quis accusantium illum! Animi mollitia provident ratione soluta molestiae omnis repudiandae!</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    <div id="card-4" class="card">
+                        <p>Easy Peasy App</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima placeat blanditiis deleniti odit perspiciatis quas cupiditate excepturi earum hic voluptas laboriosam voluptate error possimus asperiores, eum cumque at libero dicta.</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    <div id="card-5" class="card">
+                        <p>Ad Blocker</p>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam ipsa at provident tempore sunt quaerat error? Inventore, qui dolore doloribus dolor totam blanditiis possimus quod quisquam quia excepturi veniam tempora!</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    <div id="card-6" class="card">
+                        <p>Money Maker</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste omnis sint voluptas culpa error? Labore ad commodi sapiente, modi saepe perspiciatis asperiores optio necessitatibus nihil quasi similique! Fugiat, harum maxime.</p>
+                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                </div>
+            </div>
 
+            <div id="announcements">
+                <p>Announcements</p>
+                <div id="announcements_box">
+                    <div>
+                        <p>title-1</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque sapiente expedita, provident asperiores aliquam, obcaecati amet reiciendis fugit a mollitia, quos similique eos quod libero porro alias fuga. Aperiam.</p>
+                    </div>
+                    <div>
+                        <p>title-2</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio facilis voluptas reiciendis iusto odit consequuntur perspiciatis aliquid nobis recusandae ad dolorem ipsum, accusamus cumque soluta nesciunt deserunt totam inventore.</p>
+                    </div>
+                    <div>
+                        <p>title-3</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iure amet libero error ducimus earum dicta consequatur perspiciatis, maiores veniam expedita minus voluptas rerum rem in perferendis quod sapiente molestiae?</p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="trending">
+                <p>Trending</p>
+                <div id="trending_box">
+
+                </div>
+            </div>
         </div>
     </div>
 
