Fixed more of the layout

--- a/index.html
+++ b/index.html
@@ -91,29 +91,47 @@
                 <p>Your Projects</p>
                 <div id="grid">
                     <div id="card-1" class="card">
-                        <p>Super Cool Project</p>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <div class="desc">
+                            <p>Super Cool Project</p>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                     <div id="card-2" class="card">
-                        <p>Less Cool Project</p>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium dolore maiores fugit similique! Voluptas veritatis possimus quae, dolorem itaque corporis sunt explicabo cupiditate vitae consequuntur nostrum aliquam recusandae similique ipsa?</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <div class="desc">
+                            <p>Less Cool Project</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        </div>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                     <div id="card-3" class="card">
-                        <p>Impossible App</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit quo molestiae eaque suscipit? Maxime quam, veniam molestias id magni quis accusantium illum! Animi mollitia provident ratione soluta molestiae omnis repudiandae!</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <div class="desc">
+                            <div class="desc">
+                                <p>Impossible App</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                            </div>
+                        </div>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                     <div id="card-4" class="card">
-                        <p>Easy Peasy App</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima placeat blanditiis deleniti odit perspiciatis quas cupiditate excepturi earum hic voluptas laboriosam voluptate error possimus asperiores, eum cumque at libero dicta.</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <div class="desc">
+                            <p>Easy Peasy App</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        </div>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                     <div id="card-5" class="card">
                         <p>Ad Blocker</p>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam ipsa at provident tempore sunt quaerat error? Inventore, qui dolore doloribus dolor totam blanditiis possimus quod quisquam quia excepturi veniam tempora!</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                     <div id="card-6" class="card">
-                        <p>Money Maker</p>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste omnis sint voluptas culpa error? Labore ad commodi sapiente, modi saepe perspiciatis asperiores optio necessitatibus nihil quasi similique! Fugiat, harum maxime.</p>
-                        <img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                        <div class="desc">
+                            <p>Money Maker</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste omnis sint voluptas culpa error? Labore ad commodi sapiente, modi saepe perspiciatis asperiores optio necessitatibus nihil quasi similique! Fugiat, harum maxime.</p>
+                        </div>
+                        <div class="images"><img src="" alt=""><img src="" alt=""><img src="" alt=""></div>
+                    </div>
                 </div>
             </div>
 
