made the layout , icons remain and fonts

--- a/index.html
+++ b/index.html
@@ -135,28 +135,56 @@
                 </div>
             </div>
 
-            <div id="announcements">
-                <p>Announcements</p>
-                <div id="announcements_box">
-                    <div>
-                        <p>title-1</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt cumque sapiente expedita, provident asperiores aliquam, obcaecati amet reiciendis fugit a mollitia, quos similique eos quod libero porro alias fuga. Aperiam.</p>
-                    </div>
-                    <div>
-                        <p>title-2</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis optio facilis voluptas reiciendis iusto odit consequuntur perspiciatis aliquid nobis recusandae ad dolorem ipsum, accusamus cumque soluta nesciunt deserunt totam inventore.</p>
-                    </div>
-                    <div>
-                        <p>title-3</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iure amet libero error ducimus earum dicta consequatur perspiciatis, maiores veniam expedita minus voluptas rerum rem in perferendis quod sapiente molestiae?</p>
+            <div id="content_right">
+                <div id="announcements">
+                    <p>Announcements</p>
+                    <div id="announcements_box">
+                        <div>
+                            <p>Site Maintenance</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div>
+                            <p>Community Share Day</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        </div>
+                        <div>
+                            <p>Updated Privacy Policy</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-            <div id="trending">
-                <p>Trending</p>
-                <div id="trending_box">
-
+                <div id="trending">
+                    <p>Trending</p>
+                    <div id="trending_box">
+                        <div class="trend_user">
+                            <img src="" alt="">
+                            <div class="user">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="trend_user">
+                            <img src="" alt="">
+                            <div class="user">
+                                <p>@morgan</p>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="trend_user">
+                            <img src="" alt="">
+                            <div class="user">
+                                <p>@kendall</p>
+                                <p>Life Changing App</p>
+                            </div>
+                        </div>
+                        <div class="trend_user">
+                            <img src="" alt="">
+                            <div class="user">
+                                <p>@alex</p>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
